fixing home alignment issue

--- a/static/app.css
+++ b/static/app.css
@@ -17,6 +17,13 @@
 html {
     height: 100%;
     width: 100%;
+    min-height: 100% !important;
+    margin: 0;
+}
+
+body {
+    min-height: 100% !important;
+    margin: 0;
 }
 
 html * {
@@ -27,14 +34,11 @@ html * {
     text-align: center!important;
 }
 body {
-    min-height: 100% !important;
-    margin: 0;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
     text-align: left;
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-    // background-color: #012c40;
 
     color: white;
     background-color: #7c1041;
