--- a/static/home.css
+++ b/static/home.css
@@ -2,21 +2,17 @@ body{
     background-color: transparent;
     background-image: none;
     box-shadow: inset 0 0 5rem #945b75;
-}
-.body-block-img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-image: url(/static/bg.png);
-    height: calc(100% - 40px );
-    width: calc(100% - 40px);
-    background-repeat: no-repeat;
-    margin: 20px;
-}
 
+    min-height: 100% !important;
+    margin: 0;
+}
 .all-articles{
     margin: 0;
-    margin-top: 15rem;
+    margin-top: 40%;
+}
+
+.bg-img{
+    margin: 1rem;
 }
 
 .article-body{
@@ -33,25 +29,39 @@ body{
     box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
     margin-top: 3rem;
     cursor: pointer;
+    max-height: 6rem;
 }
 
-.article-card:nth-child(odd){
-    margin-right: 3rem;
-}
 
-.article-card:nth-child(even){
-    margin-right: 3rem;
+.article-card{
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
 }
 
 .article-text{
     color: #7c1041;
+    font-size: 18px;
 }
 
 .all-articles{
     padding-bottom: 3rem!important;
 }
 
-@media only screen and (max-width: 767.98px) {
+@media only screen and (orientation:portrait), (max-width: 960px) {
+    .all-articles {
+        margin-top: 1rem !important;
+    }
+    .bg-img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%;
+        margin-top: 3rem
+    }
+}
+
+/*
+@media only screen and (max-height: 767.98px) {
     .body-block{
         background-image: none;
     }
@@ -82,4 +92,4 @@ body{
         margin-top: 8rem;
         background-size: contain;
     }
-}
+}*/
